<resources>
    <string name="app_name">QuickHotel</string>
    <string name="quick">QUICK</string>
    <string name="full_name">Full Name</string>
    <string name="contact">Contact</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="log_in">Log In</string>
    <string name="create_account">Create Account?</string>
    <string name="profile">History</string>
    <string name="logout">Logout</string>
    <string name="check_in">Check-In</string>
    <string name="check_out">Check-Out</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
